@@ -495,7 +495,7 @@ typedef struct rcoption {
 #define NANO_REGEXP_KEY			NANO_ALT_R
 #define NANO_REPLACE_KEY		NANO_CONTROL_4
 #define NANO_REPLACE_FKEY		KEY_F(14)
-#define NANO_ALT_REPLACE_KEY		NANO_ALT_R
+#define NANO_REPLACE_ALTKEY		NANO_ALT_R
 #define NANO_TOOTHERSEARCH_KEY		NANO_CONTROL_R
 #define NANO_PREVPAGE_KEY		NANO_CONTROL_Y
 #define NANO_PREVPAGE_FKEY		KEY_F(7)
